log/build_2022-09-08_21-53-22/cobots_axis_gui/stdout_stderr.log
[ 20%] Generating include/cobots_axis_gui/moc_cobot_7thaxis.cpp
Scanning dependencies of target cobot_7thaxis
[ 40%] Building CXX object CMakeFiles/cobot_7thaxis.dir/src/cobot_7thaxis.cpp.o
[ 60%] Building CXX object CMakeFiles/cobot_7thaxis.dir/include/cobots_axis_gui/moc_cobot_7thaxis.cpp.o
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp: In constructor 'Cobot7thAxis::Cobot7thAxis(QWidget*)':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:6:16: error: invalid use of incomplete type 'class Ui::Cobot7thAxis'
    6 |     ui(new Ui::Cobot7thAxis)
      |                ^~~~~~~~~~~~
In file included from /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:1:
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/include/cobots_axis_gui/cobot_7thaxis.h:7:7: note: forward declaration of 'class Ui::Cobot7thAxis'
    7 | class Cobot7thAxis;
      |       ^~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:8:7: error: invalid use of incomplete type 'class Ui::Cobot7thAxis'
    8 |     ui->setupUi(this);
      |       ^~
In file included from /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:1:
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/include/cobots_axis_gui/cobot_7thaxis.h:7:7: note: forward declaration of 'class Ui::Cobot7thAxis'
    7 | class Cobot7thAxis;
      |       ^~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp: In destructor 'virtual Cobot7thAxis::~Cobot7thAxis()':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:13:12: warning: possible problem detected in invocation of delete operator: [-Wdelete-incomplete]
   13 |     delete ui;
      |            ^~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:13:12: warning: invalid use of incomplete type 'class Ui::Cobot7thAxis'
In file included from /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:1:
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/include/cobots_axis_gui/cobot_7thaxis.h:7:7: note: forward declaration of 'class Ui::Cobot7thAxis'
    7 | class Cobot7thAxis;
      |       ^~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:13:12: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined
   13 |     delete ui;
      |            ^~
make[2]: *** [CMakeFiles/cobot_7thaxis.dir/build.make:71: CMakeFiles/cobot_7thaxis.dir/src/cobot_7thaxis.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/cobot_7thaxis.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
